<resources>
    <string name="app_name">dicoding_android_intermediate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textUsername">Username</string>
    <string name="textPassword">Password</string>
    <string name="personWithComputer">Person with computer</string>
    <string name="masuk">Log in</string>
    <string name="register">Register</string>
    <string name="registerTitle">Let\'s Register</string>
    <string name="version">1.0.0</string>
    <string name="loginTitle">Let\'s Login</string>
    <string name="loginDescription">Login Description</string>
    <string name="textEmail">Email</string>
    <string name="textFullName">Full Name</string>
    <string name="already">Already have an account?</string>
    <string name="dummyDescription">Description</string>
    <string name="storyImage">Story Image</string>
    <string name="dummyDate">Dummy Date</string>
    <string name="noStoriesFound">No Stories Found</string>
    <string name="anErrorOccured">an error occured</string>
    <string name="story">Story</string>
    <string name="create_story">Create Story</string>
    <string name="no_data">No Data</string>
    <string name="title_home">Home</string>
    <string name="setting">Setting</string>
    <string name="detailToolbarTittle">>%s\'s story</string>
    <string name="addStory">Add Story</string>
    <string name="selectImage">Select Image</string>
    <string name="selectFromCamera">Camera</string>
    <string name="selectFromGallery">Gallery</string>
    <string name="writeDescription">Write a description</string>
    <string name="uploadStory">Upload Story</string>
    <string name="uploadedStory">Story Uploaded</string>
    <string name="empty_image_error">Image Error</string>
    <string name="desc_empty_field_error">Description empty error</string>
    <string name="uploadImagePerson">Upload ImagePerson</string>
    <string name="newMember">New Member?</string>
    <string name="loginSuccess">Login Success</string>
    <string name="loginError">Login Error</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="registerError">Register Failed</string>
    <string name="registerSuccess">Register Success</string>
    <string name="emailErrorMessage">Email Error</string>
    <string name="passwordErrorMessage">Password Error</string>
    <string name="languangeSetting">Languange</string>
    <string name="logoutSetting">Logout</string>
    <string name="logoutDialogMessage">Are You Sure?</string>
    <string name="cancel">Cancel</string>
    <string name="logoutSuccess">Logout Success</string>
    <string name="map">Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="location_map">lat : %2$d and lon %2$d</string>
    <string name="dummy_date">-</string>
    <string name="dummy_name">-</string>
</resources>